--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 target/
+out/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
+.idea
 .idea/jarRepositories.xml
 .idea/compiler.xml
 .idea/libraries/
